# TalesofYours

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
docs/: AGENTS.md
docs/adr/: 0001-stack-local-first.md  AGENTS.md
engine/: AGENTS.md  context.py  mechanics.py  memory.py  models.py  world_loader.py
engine/rules/: AGENTS.md  __init__.py  base.py  custom_d6.py  dnd5e.py  simple_d20.py
saves/: AGENTS.md
server/: AGENTS.md  schemas.py
server/app/: AGENTS.md  engine_service.py  main.py
server/app/llm/: AGENTS.md  ollama_client.py
tests/: AGENTS.md  test_api_surface.py  test_autosave_logging.py  test_cors_headers.py  test_game_update.py  test_mechanics.py  test_memory.py  test_models.py  test_needs.py  test_option_selection.py  test_party.py  test_player_roll_submission.py  test_rule_switching.py  test_rules.py  test_save_load_export.py  test_stat_limits.py  test_state_updates.py  test_thinking_tokens.py  test_world_import_error.py  test_world_loader.py  test_worlds_refresh.py
web/: AGENTS.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
web/public/: AGENTS.md
web/src/: AGENTS.md  index.css  main.tsx
web/src/api/: AGENTS.md  apiClient.ts  types.ts
web/src/assets/: AGENTS.md
web/src/components/: AGENTS.md  ChatStream.tsx  CreateCharacterForm.tsx  InputBar.tsx  PartyPanel.tsx  RollPrompt.tsx  RulesBadge.tsx
web/src/pages/: AGENTS.md  HomePage.tsx  PlayPage.tsx  SettingsPage.tsx  WorldEditorPage.tsx  WorldListPage.tsx  (+1 more)
worlds/: AGENTS.md  sample_world.md
