[project]
name = "talesofyours"
version = "0.1.0"
description = "Tales of Yours monorepo"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]",
    "httpx>=0.28.1",
    "uvicorn",
    "sqlalchemy>=2",
    "pydantic>=2",
    "python-frontmatter>=1.1.0",
    "markdown-it-py>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pre-commit",
    "pytest",
]

[tool.black]
line-length = 88

